fixing issues related to migration to java21